# barnacle

./: .gitignore  DESIGN  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  config.status  configure  configure.ac  depcheck.sh  dork.run  tidy.sh
OLD/: mph.c  (+39 more)
SRC/: Makefile  Makefile.am  Makefile.in  arawak.c  arawak.profile  cucumber.c  gmon.out  loam.c  mf  palette.comeback.c  tree  whaleroad
SRC/FONTCONFIG/: config.workingsorta
SRC/OLD/: btree.h  char_stats.h  exchange.c  human.h  memmacro.h
SRC/OLD/itm/: itm.c
SRC/OLD/kin/: k_character.h
SRC/boat/: boat.h  boat_control.c  boat_control.h  boat_enum.h  boat_model.c  boat_view.c  boat_view.h  compass.c  compass.h  sailtable.h
SRC/cmd/: control.c  control.h
SRC/eng/: state.c  state.h
SRC/eng/model/: bytes.c  bytes.h
SRC/env/: cloud.c  deck.c  deck.h
SRC/geo/: map.c  map.h  path_mvc.c  terrain.c  terrain.h  weather.c  weather.h
SRC/gfx/: brnoise.h  dock.c  dock.h  fancy_menus.c  gfx.c  gfx.h  gfx_boat.h  gfx_deck.h  multiwin.h  palette.c  palette.h  sprite.c  sprite.h  stdpan.c  stdpan.h  term.c  term.h  textfx.c  zbox.c  zbox.h
SRC/guy/: guy.c  guy.h  guy_control.c  guy_control.h  guy_model.c  guy_model.h  guy_view.c  guy_view.h  jobs.h  vit.c  vit.h
SRC/guy/model/: attributes.h  guy.c  guy.h  jobs.h  names.h  vitals.h
SRC/guy/view/: vitals.c
SRC/init/: init.c
SRC/itm/: domain.c  domain.h  itm.c  itm.h
SRC/lib/: bitwise.h  constants.h  coroutine.h  enumerate.h  fyshuffle.h  hash.h  macross.h  magic.c  magic.h  mergesort.h  morton.c  morton.h  quadtree.h  queue.c  quicksort.h  switches.h  ufo.h  utilitybelt.h
SRC/lib/hash/: hash.h
SRC/lib/llist/: list.h
SRC/lib/redblack/: rb.c  rb.h
SRC/lib/sort/: .mergesort.c.swo  mergesort.h  quicksort.h
SRC/lib/switches/: sw.c  sw.h
SRC/lib/twindex/: tw_boat.h  tw_map.h
SRC/loop/: fsm.c  fsm.h  loop.c  loop.h
SRC/mob/: boat.c  boat.h  human.h  mob.c  mob.h  pc.c  pc.h
SRC/noun/: noun_control.c  noun_control.h  noun_model.c  noun_model.h  noun_view.c  noun_view.h
SRC/pan/: char_stats.c  crewgen.h  ctrlpanels.c  ctrlpanels.h  dialog.c  instruments.c  instruments.h  jobs.h  menus.c  menus.h  new_character.c  new_character.h  panelctrl.c  test.c  test.h
SRC/txt/: gloss_c.c  gloss_m.c  gloss_m.h  gloss_v.c  gloss_v.h  psh.c  psh.h  rk.h
SRC/verb/: verb_control.c  verb_control.h  verb_model.c  verb_model.h  verb_view.c  verb_view.h  verbs.c  verbs.h
src/: Makefile  Makefile.am  Makefile.in  arawak.c  barnacle.c  boat.c  boat.h  control.c  control.h  deck.c  deck.h  dice.c  dice.h  dork.c  gmon.out  instruments.c  instruments.h  mob.c  notes  palette.c  palette.h  profile  rope  sprite.c  sprite.h  terrain.c  terrain.h  test.c  test.h  ticker.c  ticker.h  typedefs.h  weather.c  weather.h
src/TEST/: testplex.c
src/TEST/palettes/: RdYlBu_09.ggr  RdYlBu_10.ggr  Spectral_07.ggr  nordisk-familjebok.ggr  rainfall.ggr
src/TEST/tests/: test_perlin.c
src/_edit/: Makefile  edit  edit.c  gmon.out
src/_prof/: particle.profile  profile.flow1
src/ai/: a_star.c  a_star.h  astar.c  astar.h  pathfind.c  pathfind.h
src/camp/: builder.c  builder.h
src/com/: arawak.h  barnacle.h  textutils.c
src/eng/: bytes.c  bytes.h  error.c  error.h  fsm.c  fsm.h  init.c  init.h  loop.c  loop.h  tick.h
src/equip/: edible.c  edible.h  equipment.c  equipment.h  equipment_items.c  items.c  items.h  pickaxe.c  rope.c  rope.h
src/gfx/: colloc.c  colloc.h  gfx.c  gfx.h  multiwin.c  multiwin.h  palette.c  palette.h  sprite.c  sprite.h
src/gfx/ui/: cursor.c  cursor.h  dock.c  dock.h  menu_inventory.c  menu_inventory.h  notify.c  notify.h  stdmenu.c  stdmenu.h  stdpan.c  stdpan.h  titlecard.c  titlecard.h
src/item/: edible.c  edible.h  item.c  item.h  tools.c  tools.h
src/lib/: bheap.h  bitfit  bitmap.c  bitmap.h  bits.h  bitstring.c  bitstring.h  fifo.c  fifo.h  gfx.c  gfx.h  hash.h  lifo.c  lifo.h  list.h  magic.c  magic.h  matrix.c  matrix.h  morton.c  mtwist.c  mtwist.h  mymath.h  ncolor  pos.c  pos.h  rec.c  rec.h  textutils.c  textutils.h  ufo.c  ufo.h
src/lib/bitfit/: :w  bitfit.h  gmon.out  test
src/lib/fsm/: fsm.c  fsm.h  states.h
src/lib/hash/: hash.h  hashfunc.h
src/lib/list/: list.h
src/lib/llist/: list.h
src/lib/ncolor/: README
src/lib/redblack/: rb.c  rb.h
src/lib/sort/: mergesort.c  quicksort.c
src/lib/stoc/: brnoise.c  brnoise.h  dice.c  dice.h  matrix.c  mersenne.c  noise.c  noise.h  shuffle.c  smooth.c  smooth.h  stoc.c  stoc.h
src/lib/twindex/: twindex.h
src/map/: arena.c  arena.h  asset.c  asset.h  cave.c  cave.h  cell.c  cell.h  control.c  control.h  door.c  door.h  flow.c  flow.h  inset.c  inset.h  light.c  light.h  map.c  map.h  particle.c  particle.h  snake.c  snake.h  tag.h  terrain.c  terrain.h  tile.c  tile.h  weather.c  weather.h  zoom.c  zoom.h
src/map/special/: arena.c  arena.h  cave.c  cave.h  dungeon.c  dungeon.h
src/mob/: inventory.c  inventory.h  mob.c  mob.h  mob_control.c  mob_model.c  mob_model.h  mob_view.c
src/mob/boat/: boat_control.c  boat_control.h  boat_model.c  boat_model.h  boat_view.c  compass.c  compass.h
src/noun/: animate.c  animate.h  combat.c  combat.h  inventory.c  inventory.h  models.c  models.h  noun.c  noun.h  noun_control.c  noun_control.h  noun_discrim.c  noun_discrim.h  noun_model.c  noun_model.h  noun_view.c  noun_view.h  noun_widgets.c  noun_widgets.h  nounmenu.c  nounmenu.h  nounmenu_control.c  nounmenu_discrim.c  nounmenu_discrim.h  spawn.c  spawn.h  stats.c  stats.h
src/noun/models/: hopper.c  hopper.h  human.c  human.h  omega.c  omega.h
src/stoc/: brnoise.c  brnoise.h  dice.c  dice.h  mathutil.h  matrix.h  mersenne.h  noise.c  noise.h  shuffle.c  shuffle.h  smooth.c  smooth.h  stoc.h
src/test/: .testplex.h.swo  looptest.c  looptest.h  test.c  test.h  testplex.c  testplex.h
src/thr/: thr_pool.c  thr_pool.h
src/town/: bldg.c  bldg.h
src/txt/: effects.c  effects.h  gloss.c  gloss.h  gloss_c.h  gloss_m.c  gloss_m.h  gloss_v.c  gloss_v.h
src/verb/: fsm.h  verb.c  verb.h  verb_control.c  verb_model.c  verb_view.c  verb_view.h  verbs.c  verbs.h
(+196 files in other folders)
